<resources>
    <string name="conversation_style">bubble</string>
    <string name="prefDefault_ringtone_repeat">1</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="confirm_delete_all_SIM_messages">Are you sure to delete all SIM messages?</string>
    <string name="confirm_delete_SIM_message">Are you sure to delete this SIM message?</string>
    <string name="sim_manage_messages_title">Text messages on SIM card</string>
    <string name="sim_empty">No messages on SIM card.</string>
    <string name="sim_full_title">SIM card full</string>
    <string name="save_to_sim">Save to SIM card</string>
    <string name="app_label">Messaging</string>
    <string name="new_message">New message</string>
    <string name="menu_call_back">Call %s</string>
    <string name="menu_send_email">Send email to %s</string>
    <string name="menu_compose_new">Compose</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_add_address_to_contacts">Add %s to People</string>
    <string name="menu_call">Call</string>
    <string name="menu_search">Search</string>
    <string name="menu_delete_all">Delete all threads</string>
    <string name="menu_delete">Delete thread</string>
    <string name="menu_view">View thread</string>
    <string name="menu_debug_dump">DEBUG DUMP</string>
    <string name="refreshing">Refreshing…</string>
    <string name="has_draft">Draft</string>
    <string name="no_subject_view">(No subject)</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="view_slideshow">View slideshow</string>
    <string name="view_message_details">View details</string>
    <string name="view_delivery_report">View report</string>
    <string name="delete_message">Delete</string>
    <string name="expire_on">Expires: %s</string>
    <string name="kilobyte">KB</string>
    <string name="undelivered_msg_dialog_title">Undelivered message</string>
    <string name="undelivered_msg_dialog_body">"Couldn't send this message.
Attempt made: %s."</string>
    <string name="undelivered_sms_dialog_body">"Couldn't send this message."</string>
    <string name="delete_thread">Delete thread</string>
    <string name="menu_forward">Forward</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="inline_subject">&lt;Subject: %s></string>
    <string name="drm_protected_text">* DRM protected text *</string>
    <string name="insufficient_drm_rights">Insufficient DRM rights detected.</string>
    <string name="copy_message_text">Copy text</string>
    <string name="message_options">Message options</string>
    <string name="done">Done</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove_slide">Remove slide</string>
    <string name="add_slide">Add slide</string>
    <string name="add_slide_hint">Touch to create new slide.</string>
    <string name="discard_slideshow">Discard slideshow</string>
    <string name="slide_show_part">Part %1$s/%2$s</string>
    <string name="remove_text">Remove text</string>
    <string name="add_picture">Add picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="add_music">Add music</string>
    <string name="remove_music">Remove music</string>
    <string name="add_video">Add video</string>
    <string name="remove_video">Remove video</string>
    <string name="to_hint">To</string>
    <string name="subject_hint">Subject</string>
    <string name="add_attachment">Attach</string>
    <string name="add_subject">Add subject</string>
    <string name="discard">Discard</string>
    <string name="view">View</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="mms">MMS</string>
    <string name="all_threads">All threads</string>
    <string name="type_to_compose_text_enter_to_send">Type message</string>
    <string name="open_keyboard_to_compose_message">Open keyboard to type message</string>
    <string name="compressing">Picture too large. Compressing…</string>
    <string name="unsupported_media_format">Unsupported %1$s format.</string>
    <string name="select_different_media">Choose a different %1$s.</string>
    <string name="exceed_message_size_limitation">Message size limit reached.</string>
    <string name="message_too_big_for_video">The message is too big to attach a video.</string>
    <string name="failed_to_add_media">"You can't add this %1$s to your message."</string>
    <string name="failed_to_resize_image">Picture not resized.</string>
    <string name="resize_image_error_information">This picture is too large to send, even when resized.</string>
    <string name="forward_prefix">"Fwd: "</string>
    <string name="discard_message">Discard</string>
    <string name="discard_message_reason">Your message will be discarded because it has no valid recipients.</string>
    <string name="has_invalid_recipient">Invalid recipient(s): &lt;%1$s></string>
    <string name="invalid_destination">Invalid destination address.</string>
    <string name="service_not_activated">Service not activated on network.</string>
    <string name="service_message_not_found">Message expired or not available.</string>
    <string name="service_network_problem">"Couldn't send due to network problem."</string>
    <string name="invalid_recipient_message">"Correct the recipient(s) or they won't receive the message."</string>
    <string name="cannot_send_message">"Can't send message"</string>
    <string name="cannot_send_message_reason">Your message has no valid recipients.</string>
    <string name="cannot_forward_drm_obj">"The DRM object included in the message can't be forwarded."</string>
    <string name="converting_to_picture_message">Converting to multimedia message…</string>
    <string name="converting_to_text_message">Converting to text message…</string>
    <string name="cannot_add_slide_anymore">"Can't add more slides."</string>
    <string name="cannot_add_picture_and_video">"Can't add video and picture to one slide."</string>
    <string name="cannot_save_message">"Can't save message."</string>
    <string name="message_saved_as_draft">Message saved as draft.</string>
    <string name="too_many_recipients">Message has too many recipients (%1$s). There is a limit of %2$s recipients.</string>
    <string name="too_many_attachments">There is a limit of %1$s attachments. Only the first %2$s will be added.</string>
    <string name="adding_attachments_title">Adding attachments</string>
    <string name="preview">Preview</string>
    <string name="replace_image">Replace picture</string>
    <string name="type_to_compose_text_or_leave_blank">Type message, or leave blank</string>
    <string name="play">Play</string>
    <string name="pref_notification_settings_title">Notifications</string>
    <string name="pref_mms_settings_title">Multimedia (MMS) messages</string>
    <string name="pref_sms_storage_title">Storage</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
    <string name="pref_summary_auto_delete">Delete old messages as limits are reached</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>
    <string name="copy_to_sdcard">Save attachment</string>
    <string name="pref_theme_modify">Edit theme</string>
    <string name="pref_sms_theme_title">Theme settings</string>
    <string name="pref_conversation_show_avatar">Show avatar</string>
    <string name="pref_messaging_style">Message style</string>
    <string name="pref_time_auto_group_title">Group</string>
    <string name="pref_time_auto_group_summary">Group messages by time</string>
    <string name="pref_time_all_title">Show all</string>
    <string name="pref_time_all_summary">Show time for each message</string>
    <string name="pref_title_notification_body_enabled">Show previews</string>
    <string name="pref_summary_notification_body_enabled">Preview messages on lockscreen and status bar</string>
    <string name="pref_title_new_message_popup">New message pop-ups</string>
    <string name="pref_summary_new_message_popup">Show pop-ups when new message is received</string>
    <string name="pref_title_wake_up_screen">Screen-wake</string>
    <string name="pref_summary_wake_up_screen">Wake up screen when new message is received</string>
    <string name="pref_title_delivery_reports">Delivery reports</string>
    <string name="pref_summary_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_title_ringtone_repeat">Repeat notification ringtone</string>
    <string name="pref_summary_ringtone_repeat">Repeats every 5 minutes when new message is received</string>
    <string name="pref_other_title">Other</string>
    <string name="pref_advanced_settings_title">Advanced settings</string>
    <string name="pref_edit_smsc_address">SMS center number</string>
    <string name="pref_title_allow_si_sl_push">Allow WAP push</string>
    <string name="pref_summary_allow_si_sl_push">Allow receiving and notifying WAP push messages (SI/SL)</string>
    <string name="pref_title_show_recent_contacts">Show recent contacts</string>
    <string name="pref_summary_show_recent_contacts">Show a list of recent contacts while composing a new message</string>
    <string name="pref_title_hide_festival">Hide recommend tab</string>
    <string name="pref_summary_hide_festival">Hide recommend tab for Non-Chinese language</string>
    <string name="pref_key_append_signature_title">Optional signature</string>
    <string name="pref_key_append_signature_summary">Automatically add signature to end of the message</string>
    <string name="pref_key_edit_signature_title">Edit signature</string>
    <string name="pref_key_signature_summary">Enter here to set your signature</string>
    <string name="pref_key_signature_hint">Please enter your signature</string>
    <string name="menu_view_original_message">View original message</string>
    <string name="pref_title_system_mms_priority">System mms app priority</string>
    <string name="pref_summary_on_system_mms_priority">System mms app get priority to handle then abort mms broadcast first</string>
    <string name="pref_summary_off_system_mms_priority">Other app may get mms broadcast before system mms app get it</string>
    <string name="title_date_type">Message timestamp</string>
    <string name="dialog_title_date_type">Choose Message Timestamp</string>
    <string name="mi_msg">Cloud message</string>
    <string name="mx_enable">Enable cloud message</string>
    <string name="mx_dspt">Send messages via Internet between MIUI, turn to send via Operator once failed (%s)</string>
    <string name="mx_auto_resend_sms">Send As SMS</string>
    <string name="mx_auto_resend_sms_summary">Send as SMS when Cloud message is unavailable. Carrier messaging rates may apply</string>
</resources>