<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/mi_msg">
        <CheckBoxPreference android:persistent="false" android:title="@string/mx_enable" android:key="pref_key_enable_mx_switch" android:summary="@string/mx_dspt" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/mx_auto_resend_sms" android:key="pref_key_mx_auto_resend_sms" android:summary="@string/mx_auto_resend_sms_summary" android:dependency="pref_key_enable_mx_switch" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_notification_settings_title">
        <CheckBoxPreference android:persistent="false" android:title="@string/pref_title_notification_enabled" android:key="pref_key_enable_notification" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="false" android:layout="?android:preferenceLayoutChild" android:title="@string/pref_title_notification_body_enabled" android:key="pref_key_enable_notification_body" android:summary="@string/pref_summary_notification_body_enabled" android:dependency="pref_key_enable_notification" android:defaultValue="true" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/pref_title_new_message_popup" android:key="pref_key_enable_new_message_popup" android:summary="@string/pref_summary_new_message_popup" android:dependency="pref_key_enable_notification" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="false" android:layout="?android:preferenceLayoutChild" android:title="@string/pref_title_wake_up_screen" android:key="pref_key_enable_wake_up_screen" android:summary="@string/pref_summary_wake_up_screen" android:dependency="pref_key_enable_notification" android:defaultValue="true" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/pref_title_delivery_reports" android:key="pref_key_delivery_reports" android:summary="@string/pref_summary_delivery_reports" android:dependency="pref_key_enable_notification" android:defaultValue="true" />
        <ListPreference android:entries="@array/prefEntries_ringtone_repeat" android:layout="?android:preferenceLayoutChild" android:title="@string/pref_title_ringtone_repeat" android:key="pref_key_ringtone_repeat" android:summary="@string/pref_summary_ringtone_repeat" android:dependency="pref_key_enable_notification" android:defaultValue="@string/prefDefault_ringtone_repeat" android:dialogTitle="@string/pref_title_ringtone_repeat" android:entryValues="@array/prefValues_ringtone_repeat" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_sms_theme_title" android:key="pref_key_theme_settings">
        <PreferenceScreen android:title="@string/pref_theme_modify" android:key="pref_key_launch_theme_modify" />
        <CheckBoxPreference android:title="@string/pref_conversation_show_avatar" android:key="pref_key_conversation_show_avatar" android:defaultValue="true" />
        <PreferenceScreen android:title="@string/pref_messaging_style" android:key="pref_key_message_theme_setting">
            <intent android:action="com.android.mms.MESSAGING_STYLE" />
        </PreferenceScreen>
        <CheckBoxPreference android:title="@string/pref_title_show_recent_contacts" android:key="pref_key_show_recent_contacts" android:summary="@string/pref_summary_show_recent_contacts" android:defaultValue="true" />
        <ListPreference android:entries="@array/entries_date_type" android:title="@string/title_date_type" android:key="pref_key_date_type" android:defaultValue="0" android:dialogTitle="@string/dialog_title_date_type" android:entryValues="@array/entryvalues_date_type" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_other_title" android:key="pref_other_settings">
        <CheckBoxPreference android:title="@string/pref_title_system_mms_priority" android:key="pref_key_system_mms_priority" android:defaultValue="true" android:summaryOn="@string/pref_summary_on_system_mms_priority" android:summaryOff="@string/pref_summary_off_system_mms_priority" />
        <CheckBoxPreference android:title="@string/pref_key_append_signature_title" android:key="pref_key_append_signature" android:summary="@string/pref_key_append_signature_summary" android:defaultValue="false" />
        <EditTextPreference android:layout="?android:preferenceLayoutChild" android:hint="@string/pref_key_signature_hint" android:minLines="3" android:title="@string/pref_key_edit_signature_title" android:key="pref_key_edit_signature" android:summary="@string/pref_key_signature_summary" android:dependency="pref_key_append_signature" />
        <PreferenceScreen android:title="@string/pref_advanced_settings_title" android:key="pref_advanced_settings">
            <intent android:targetPackage="com.android.mms" android:action="android.intent.action.MAIN" android:targetClass="com.android.mms.ui.MessagingAdvancedPreferenceActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>