<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_mms_settings_title" android:key="pref_key_mms_settings">
        <CheckBoxPreference android:title="@string/pref_title_mms_read_reports" android:key="pref_key_mms_read_reports" android:summary="@string/pref_summary_mms_read_reports" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_title_mms_auto_retrieval" android:key="pref_key_mms_auto_retrieval" android:summary="@string/pref_summary_mms_auto_retrieval" android:defaultValue="true" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/pref_title_mms_retrieval_during_roaming" android:key="pref_key_mms_retrieval_during_roaming" android:summary="@string/pref_summary_mms_retrieval_during_roaming" android:dependency="pref_key_mms_auto_retrieval" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_sms_storage_title" android:key="pref_key_storage_settings">
        <CheckBoxPreference android:title="@string/pref_title_auto_delete" android:key="pref_key_auto_delete" android:summary="@string/pref_summary_auto_delete" android:defaultValue="false" />
        <Preference android:persistent="false" android:layout="?android:preferenceLayoutChild" android:title="@string/pref_title_sms_delete" android:key="pref_key_sms_delete_limit" android:dependency="pref_key_auto_delete" />
        <Preference android:persistent="false" android:layout="?android:preferenceLayoutChild" android:title="@string/pref_title_mms_delete" android:key="pref_key_mms_delete_limit" android:dependency="pref_key_auto_delete" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_other_title" android:key="pref_key_other_settings">
        <CheckBoxPreference android:title="@string/pref_title_allow_si_sl_push" android:key="pref_key_allow_si_sl_push" android:summary="@string/pref_summary_allow_si_sl_push" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_title_hide_festival" android:key="pref_key_hide_festival" android:summary="@string/pref_summary_hide_festival" android:defaultValue="true" />
        <Preference android:title="@string/pref_edit_smsc_address" android:key="pref_key_edit_sim_smsc_address" />
        <Preference android:title="@string/pref_title_manage_sim_messages" android:key="pref_key_manage_sim_messages" />
    </PreferenceCategory>
</PreferenceScreen>