<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_forward_holo_dark" android:id="@id/action_forward_message" android:title="@string/menu_forward" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_lock_holo_dark" android:id="@id/action_lock_message" android:title="@string/menu_lock" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_unlock_holo_dark" android:id="@id/action_unlock_message" android:title="@string/menu_unlock" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_copy_holo_dark" android:id="@id/action_copy_message_text" android:title="@string/copy_message_text" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_trash_holo_dark" android:id="@id/action_delete_message" android:title="@string/delete_message" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_info_holo_dark" android:id="@id/action_view_message_details" android:title="@string/view_message_details" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_edit" android:id="@id/action_view_original_message" android:title="@string/menu_view_original_message" android:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_edit" android:id="@id/action_edit_message" android:title="@string/menu_edit" android:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_edit" android:id="@id/action_copy_to_sdcard" android:title="@string/copy_to_sdcard" android:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_edit" android:id="@id/action_copy_to_drm_provider" android:title="@string/copy_to_sdcard" android:showAsAction="never" />
</menu>