<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory>
        <com.android.mms.ui.MessagingStylePreference android:persistent="false" android:key="pref_key_messaging_style" />
    </PreferenceCategory>
    <miui.preference.RadioButtonPreferenceCategory android:key="pref_key_time_style">
        <miui.preference.RadioButtonPreference android:title="@string/pref_time_auto_group_title" android:key="pref_key_time_style_auto_group" android:summary="@string/pref_time_auto_group_summary" android:defaultValue="true" />
        <miui.preference.RadioButtonPreference android:title="@string/pref_time_all_title" android:key="pref_key_time_style_all" android:summary="@string/pref_time_all_summary" android:defaultValue="false" />
    </miui.preference.RadioButtonPreferenceCategory>
</PreferenceScreen>