<?xml version="1.0" encoding="utf-8"?>
<com.android.mms.ui.BasicSlideEditorView android:orientation="vertical" android:id="@id/slide_editor_view" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="@*android:drawable/editbox_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:layout_weight="1.0">
            <ImageView android:id="@id/image" android:background="@*android:drawable/picture_frame" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <LinearLayout android:orientation="horizontal" android:id="@id/audio" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_mms_music" />
                <TextView android:layout_gravity="center_vertical" android:id="@id/audio_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/controler" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageButton android:id="@id/pre_slide_button" android:layout_width="wrap_content" android:layout_height="50.0dip" android:src="@drawable/ic_maps_back" style="?android:attr/buttonStyleSmall" />
                <ImageButton android:id="@id/next_slide_button" android:layout_width="wrap_content" android:layout_height="50.0dip" android:src="@drawable/ic_maps_next" style="?android:attr/buttonStyleSmall" />
            </LinearLayout>
            <Button android:id="@id/preview_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/preview" android:lines="2" style="?android:attr/buttonStyleSmall" />
            <Button android:id="@id/replace_image_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/replace_image" android:lines="2" style="?android:attr/buttonStyleSmall" />
            <Button android:id="@id/remove_slide_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/remove_slide" android:lines="2" style="?android:attr/buttonStyleSmall" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false">
        <EditText android:textSize="15.0sp" android:id="@id/text_message" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:nextFocusRight="@id/done_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/type_to_compose_text_or_leave_blank" android:maxLines="1" android:capitalize="sentences" android:autoText="true" android:layout_weight="1.0">
            <requestFocus />
        </EditText>
        <Button android:id="@id/done_button" android:nextFocusLeft="@id/text_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/done" />
    </LinearLayout>
</com.android.mms.ui.BasicSlideEditorView>